--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Visual Studio 2015 user specific files
+﻿# Visual Studio 2015 user specific files
 .vs/
 
 # Visual Studio 2015 database file
@@ -77,3 +77,6 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 /Plugins/*/*/Binaries/*
 /Plugins/*/*/Intermediate/*
+
+# ThridParty
+/Plugins/*/*/Thirdparty/*
